added map view and search bar now searches

--- a/GeoMinders/Info.plist
+++ b/GeoMinders/Info.plist
@@ -30,6 +30,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app sends you reminders when you are in the vicinity of your favorite store.  It needs your permission to access your location.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
